// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"  !!seq\\n #123 \\n&anchor # 456 \\n []  " 1`] = `
flowSequence (4:2 ~ 4:4)
1 | ··!!seq¶
2 | ·#123·¶
3 | &anchor·#·456·¶
4 | ·[]··¶
  |  ^^
<flowSequence>
  <tag value="tag:yaml.org,2002:seq" />
  <anchor value="anchor" />
  <middleComment value="123 ">
  <middleComment value=" 456 ">
</flowSequence>
`;

exports[`"  !!seq\\n #123 \\n&anchor # 456 \\n []  " 2`] = `
comment (2:2 ~ 2:7)
1 | ··!!seq¶
2 | ·#123·¶
  |  ^^^^^
3 | &anchor·#·456·¶
4 | ·[]··¶
<comment value="123 " />
`;

exports[`"  !!seq\\n #123 \\n&anchor # 456 \\n []  " 3`] = `
comment (3:9 ~ 3:15)
1 | ··!!seq¶
2 | ·#123·¶
3 | &anchor·#·456·¶
  |         ^^^^^^
4 | ·[]··¶
<comment value=" 456 " />
`;

exports[`"  [ : ]  " 1`] = `
flowSequence (1:3 ~ 1:8)
1 | ··[·:·]··¶
  |   ^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ : ]  " 2`] = `
flowMappingItem (1:5 ~ 1:6)
1 | ··[·:·]··¶
  |     ^
<flowMappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ : 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·:·123·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ : 123 ]  " 2`] = `
flowMappingItem (1:5 ~ 1:10)
1 | ··[·:·123·]··¶
  |     ^^^^^
<flowMappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ ? : ]  " 1`] = `
flowSequence (1:3 ~ 1:10)
1 | ··[·?·:·]··¶
  |   ^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ ? : ]  " 2`] = `
flowMappingItem (1:5 ~ 1:8)
1 | ··[·?·:·]··¶
  |     ^^^
<flowMappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ ? : 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:14)
1 | ··[·?·:·123·]··¶
  |   ^^^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <plain value="123" />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ ? : 123 ]  " 2`] = `
flowMappingItem (1:5 ~ 1:12)
1 | ··[·?·:·123·]··¶
  |     ^^^^^^^
<flowMappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <plain value="123" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ ? ]  " 1`] = `
flowSequence (1:3 ~ 1:8)
1 | ··[·?·]··¶
  |   ^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <null />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ ? ]  " 2`] = `
flowMappingItem (1:5 ~ 1:6)
1 | ··[·?·]··¶
  |     ^
<flowMappingItem>
  <mappingKey>
    <null />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ ? 123 : ]  " 1`] = `
flowSequence (1:3 ~ 1:14)
1 | ··[·?·123·:·]··¶
  |   ^^^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ ? 123 : ]  " 2`] = `
flowMappingItem (1:5 ~ 1:12)
1 | ··[·?·123·:·]··¶
  |     ^^^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ ? 123 : 456 ]  " 1`] = `
flowSequence (1:3 ~ 1:18)
1 | ··[·?·123·:·456·]··¶
  |   ^^^^^^^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ ? 123 : 456 ]  " 2`] = `
flowMappingItem (1:5 ~ 1:16)
1 | ··[·?·123·:·456·]··¶
  |     ^^^^^^^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ ? 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·?·123·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ ? 123 ]  " 2`] = `
flowMappingItem (1:5 ~ 1:10)
1 | ··[·?·123·]··¶
  |     ^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ 123 : ]  " 1`] = `
flowSequence (1:3 ~ 1:12)
1 | ··[·123·:·]··¶
  |   ^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <null />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ 123 : ]  " 2`] = `
flowMappingItem (1:5 ~ 1:10)
1 | ··[·123·:·]··¶
  |     ^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <null />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ 123 : 456 ]  " 1`] = `
flowSequence (1:3 ~ 1:16)
1 | ··[·123·:·456·]··¶
  |   ^^^^^^^^^^^^^
<flowSequence>
  <flowMappingItem>
    <mappingKey>
      <plain value="123" />
    </mappingKey>
    <mappingValue>
      <plain value="456" />
    </mappingValue>
  </flowMappingItem>
</flowSequence>
`;

exports[`"  [ 123 : 456 ]  " 2`] = `
flowMappingItem (1:5 ~ 1:14)
1 | ··[·123·:·456·]··¶
  |     ^^^^^^^^^
<flowMappingItem>
  <mappingKey>
    <plain value="123" />
  </mappingKey>
  <mappingValue>
    <plain value="456" />
  </mappingValue>
</flowMappingItem>
`;

exports[`"  [ 123 ]  " 1`] = `
flowSequence (1:3 ~ 1:10)
1 | ··[·123·]··¶
  |   ^^^^^^^
<flowSequence>
  <flowSequenceItem>
    <plain value="123" />
  </flowSequenceItem>
</flowSequence>
`;

exports[`"  [ 123 ]  " 2`] = `
flowSequenceItem (1:5 ~ 1:8)
1 | ··[·123·]··¶
  |     ^^^
<flowSequenceItem>
  <plain value="123" />
</flowSequenceItem>
`;

exports[`"  [ 123, #123\\n ]  " 1`] = `
flowSequence (1:3 ~ 2:3)
1 | ··[·123,·#123¶
  |   ^^^^^^^^^^^^
2 | ·]··¶
  | ^^
<flowSequence>
  <flowSequenceItem>
    <plain value="123">
      <trailingComment value="123">
    </plain>
  </flowSequenceItem>
</flowSequence>
`;

exports[`"  [ 123, #123\\n ]  " 2`] = `
flowSequenceItem (1:5 ~ 1:14)
1 | ··[·123,·#123¶
  |     ^^^^^^^^^
2 | ·]··¶
<flowSequenceItem>
  <plain value="123">
    <trailingComment value="123">
  </plain>
</flowSequenceItem>
`;

exports[`"  [ 123, ]  " 1`] = `
flowSequence (1:3 ~ 1:11)
1 | ··[·123,·]··¶
  |   ^^^^^^^^
<flowSequence>
  <flowSequenceItem>
    <plain value="123" />
  </flowSequenceItem>
</flowSequence>
`;

exports[`"  [ 123, ]  " 2`] = `
flowSequenceItem (1:5 ~ 1:8)
1 | ··[·123,·]··¶
  |     ^^^
<flowSequenceItem>
  <plain value="123" />
</flowSequenceItem>
`;
